# measurement

./: .gitignore  CMakeLists.txt  Makefile  README.md
App/: App.cpp  CMakeLists.txt  Makefile
App/Sim/: Sim.cpp
App/Test/: TestMeasurementTasks.cpp
Common/: CommonUtil.c  CommonUtil.h  Message.c  Message.h  Node.c  Node.h  Pack_GCM.c  Pack_GCM.h  Pack_memcpy.c  Pack_memcpy.h  Packs.h  Queue.c  Queue.h  Ringbuffer.h  Socket.c  Socket.h  Spinlock.h
Enclave/: CMakeLists.txt  Enclave.cpp  Enclave.edl  EnclaveFunction.cpp  EnclaveFunction.h  EnclaveUtil.cpp  EnclaveUtil.h  Makefile
Enclave/CMSketch/: CMSketch.h
Enclave/Sketch/: CMSketch.h
Enclave/SpookyHash/: SpookyV2.cpp  SpookyV2.h
Oblivious/App/: App.cpp  Makefile
Oblivious/Enclave/: Enclave.cpp  Enclave.edl  EnclaveFunction.cpp  EnclaveFunction.h  EnclaveUtil.h  Makefile
Oblivious/Enclave/ORAM/: PathORAM.cpp  PathORAM.h  Stash.cpp  Stash.h
Oblivious/Enclave/Sketch/: CMSketch.h  ObliviousBucket.h
Oblivious/Enclave/SpookyHash/: SpookyV2.h
Oblivious/Test/: TestObliviousBucket.cpp  TestObliviousSketch.cpp  TestPathORAM.cpp
Strawman/App/: App.cpp  Makefile
Strawman/Enclave/: Enclave.config.xml  Enclave.cpp  EnclaveFunction.cpp  EnclaveFunction.h  Enclave_private.pem  Makefile
Strawman/Enclave/Sketch/: CMSketch.h
Strawman/Test/: TestCMSketch.cpp
Test/: TestCMSketch.cpp  TestSpookyV2.cpp
Tool/: PacketSampling.cpp
